# chat-bot

./: README.md  db.sqlite3  project-initialize.bat  pyproject.toml  requirements.txt  run-lan.txt
backend/: asgi.py  routing.py  settings.py
chat_bot/: consumers.py  haystack_pipeline.py  routing.py  tts_utils.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/hooks/: useWebSocket.ts
